[gd_scene load_steps=10 format=3 uid="uid://cvcxfhdyfyqir"]

[ext_resource type="Texture2D" uid="uid://dftajn4hscmvd" path="res://Game/3UI/Inventory/Texture/Inventory.png" id="1_0dlar"]
[ext_resource type="Script" path="res://Game/3UI/Inventory/Hotbar/HotbarScript/texture_rect.gd" id="2_n60el"]
[ext_resource type="PackedScene" uid="uid://dbqjn5eksm07k" path="res://Game/3UI/Inventory/tools/texture_rect.tscn" id="3_5qk6l"]
[ext_resource type="Texture2D" uid="uid://dyxs03hqs0ypk" path="res://Game/3UI/Inventory/Texture/Hoe2-sheet.png" id="4_bsbx7"]
[ext_resource type="Texture2D" uid="uid://kt08upbepxwu" path="res://Game/3UI/Inventory/Texture/Selected-sheet.png" id="4_gn2tu"]
[ext_resource type="PackedScene" uid="uid://b15ngk6q0dt6u" path="res://Game/3UI/Inventory/tools/bucket.tscn" id="4_k0axr"]
[ext_resource type="PackedScene" uid="uid://dfdjovql0i78e" path="res://Game/3UI/Inventory/tools/carrot_seed.tscn" id="5_b8rn2"]
[ext_resource type="PackedScene" uid="uid://b5qgqekkfrltj" path="res://Game/3UI/Inventory/tools/carrot.tscn" id="6_7jk68"]
[ext_resource type="Texture2D" uid="uid://bwlypcr52a77i" path="res://Game/3UI/Inventory/Texture/Coin-sheet.png" id="8_84po8"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -215.0
offset_top = -53.0
offset_right = 232.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_0dlar")
script = ExtResource("2_n60el")

[node name="TextureRect" parent="TextureRect" instance=ExtResource("3_5qk6l")]
layout_mode = 0
offset_left = 26.0
offset_top = 7.0
offset_right = 66.0
offset_bottom = 47.0

[node name="Hoe2" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 26.0
offset_top = 7.0
offset_right = 66.0
offset_bottom = 47.0
texture = ExtResource("4_bsbx7")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 5.5
offset_right = 45.5
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"

[node name="Qantity" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 333.0
offset_top = 30.0
offset_right = 352.0
offset_bottom = 53.0
text = "0"
horizontal_alignment = 2

[node name="Bucket" parent="TextureRect" instance=ExtResource("4_k0axr")]
position = Vector2(113, 7)

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 97.0
offset_right = 137.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2"

[node name="Carrot_Seed" parent="TextureRect" instance=ExtResource("5_b8rn2")]
position = Vector2(287, -9)

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 185.0
offset_right = 225.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "3
"

[node name="Label4" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 273.0
offset_right = 313.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "4
"

[node name="Carrot" parent="TextureRect" instance=ExtResource("6_7jk68")]
layout_mode = 1
offset_left = 376.0
offset_top = 5.0
offset_right = -25.0
offset_bottom = -2.0

[node name="Qantity2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 421.0
offset_top = 30.0
offset_right = 440.0
offset_bottom = 53.0
text = "0"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 362.0
offset_right = 402.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "5
"

[node name="Slot1" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_right = 93.0
offset_bottom = 53.0
texture = ExtResource("4_gn2tu")

[node name="Slot2" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 90.0
offset_right = 182.0
offset_bottom = 53.0
texture = ExtResource("4_gn2tu")

[node name="Slot3" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 178.0
offset_right = 270.0
offset_bottom = 53.0
texture = ExtResource("4_gn2tu")

[node name="Slot4" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 266.0
offset_right = 359.0
offset_bottom = 53.0
texture = ExtResource("4_gn2tu")

[node name="Slot5" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 354.0
offset_right = 447.0
offset_bottom = 53.0
texture = ExtResource("4_gn2tu")

[node name="Coin" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 305.0
offset_top = 602.0
offset_right = 347.0
offset_bottom = 644.0
texture = ExtResource("8_84po8")

[node name="CoinsNumber" type="Label" parent="."]
offset_left = 186.0
offset_top = 606.0
offset_right = 304.0
offset_bottom = 641.0
theme_override_font_sizes/font_size = 25
text = "1"
horizontal_alignment = 2
